force-app/main/default/objects/Deployment__c/Deployment__c.object-meta.xml
<CustomObject>
    <label>Deployment</label>
    <pluralLabel>Deployments</pluralLabel>
    <nameField>
        <label>Name</label>
        <type>AutoNumber</type>
        <displayFormat>DEP-{000000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Deployment</description>
</CustomObject>