force-app/main/default/objects/Deployment__c/fields/AI_Risk_Score__c.field-meta.xml
<CustomField>
    <fullName>AI_Risk_Score__c</fullName>
    <label>AI Risk Score</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>