force-app/main/default/objects/Deployment__c/fields/Error_Count__c.field-meta.xml
<CustomField>
    <fullName>Error_Count__c</fullName>
    <label>Error Count</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>