force-app/main/default/objects/Deployment__c/fields/Initiated_By__c.field-meta.xml
<CustomField>
    <fullName>Initiated_By__c</fullName>
    <label>Initiated By</label>
    <type>Text</type>
    <length>255</length>
</CustomField>