force-app/main/default/objects/Deployment__c/fields/Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Pipeline__c</fullName>
    <label>Pipeline</label>
    <type>Lookup</type>
    <referenceTo>Pipeline__c</referenceTo>
    <relationshipLabel>Deployments</relationshipLabel>
    <relationshipName>Deployments</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>