force-app/main/default/objects/Deployment__c/fields/Rollback_Deployment__c.field-meta.xml
<CustomField>
    <fullName>Rollback_Deployment__c</fullName>
    <label>Rollback Deployment</label>
    <type>Lookup</type>
    <referenceTo>Deployment__c</referenceTo>
    <relationshipLabel>Rollback Deployments</relationshipLabel>
    <relationshipName>Rollback_Deployments</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>