force-app/main/default/objects/Deployment__c/fields/Source_Branch__c.field-meta.xml
<CustomField>
    <fullName>Source_Branch__c</fullName>
    <label>Source Branch</label>
    <type>Lookup</type>
    <referenceTo>Branch__c</referenceTo>
    <relationshipLabel>Deployments</relationshipLabel>
    <relationshipName>Deployments</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>