force-app/main/default/objects/Deployment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Pending</fullName><default>false</default><label>Pending</label></value>
            <value><fullName>Queued</fullName><default>false</default><label>Queued</label></value>
            <value><fullName>InProgress</fullName><default>false</default><label>InProgress</label></value>
            <value><fullName>Validating</fullName><default>false</default><label>Validating</label></value>
            <value><fullName>Testing</fullName><default>false</default><label>Testing</label></value>
            <value><fullName>QualityCheck</fullName><default>false</default><label>QualityCheck</label></value>
            <value><fullName>Success</fullName><default>false</default><label>Success</label></value>
            <value><fullName>Failed</fullName><default>false</default><label>Failed</label></value>
            <value><fullName>RolledBack</fullName><default>false</default><label>RolledBack</label></value>
            <value><fullName>Cancelled</fullName><default>false</default><label>Cancelled</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>