force-app/main/default/objects/Deployment__c/fields/Total_Components__c.field-meta.xml
<CustomField>
    <fullName>Total_Components__c</fullName>
    <label>Total Components</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>